Created an alternative rule (non-centroid based) to pick own FADs to harvest; set up costs and AlgorithmFactories for it (unfortunately this breaks the previous YAML interface so the backsliding tests were updated). Also updated yaml sample inputs

--- a/inputs/YAML Samples/components/GearStrategy.yaml
+++ b/inputs/YAML Samples/components/GearStrategy.yaml
@@ -41,4 +41,5 @@ Periodic Gear Update Selectivity:
 FAD Refill:
   fadCost: 1000.0
   maxFadDeploymentsFile: inputs/epo_inputs/max_deployments.csv
+  targetYear: 2017
 -------
