--- a/inputs/tests/tunabacksliding/calibration_logistic.yaml
+++ b/inputs/tests/tunabacksliding/calibration_logistic.yaml
@@ -4,278 +4,292 @@ parameters:
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: destinationStrategy.additionalHourlyDelayDeployment
   alwaysPositive: true
-  maximum: 0.8131800000000001
-  minimum: 0.54212
+  maximum: 1.21362
+  minimum: 0.80908
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: destinationStrategy.additionalHourlyDelayDolphinSets
   alwaysPositive: true
-  maximum: 6.632639999999999
-  minimum: 4.42176
+  maximum: 13.251599999999998
+  minimum: 8.8344
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: destinationStrategy.additionalHourlyDelayNonAssociatedSets
+  alwaysPositive: true
+  maximum: 12.834599999999998
+  minimum: 8.5564
+  rawNumber: false
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+  addressToModify: destinationStrategy.fadModule.distancePenalty
+  alwaysPositive: true
+  maximum: 2.1322799999999997
+  minimum: 1.4215200000000001
+  rawNumber: false
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+  addressToModify: destinationStrategy.hoursWastedOnFailedSearches
+  alwaysPositive: true
+  maximum: 6.4206
+  minimum: 4.2804
+  rawNumber: false
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+  addressToModify: destinationStrategy.fadModule.minimumValueFadSets
   alwaysPositive: true
   maximum: 0.001
   minimum: 0.0
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
-  addressToModify: destinationStrategy.fadModule.distancePenalty
-  alwaysPositive: true
-  maximum: 2.943576
-  minimum: 1.9623840000000001
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
-  addressToModify: destinationStrategy.hoursWastedOnFailedSearches
-  alwaysPositive: true
-  maximum: 5.654639999999999
-  minimum: 3.7697599999999998
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
-  addressToModify: destinationStrategy.fadModule.minimumValueFadSets
-  alwaysPositive: true
-  maximum: 60000.0
-  minimum: 40000.0
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: destinationStrategy.minimumValueOpportunisticFadSets
   alwaysPositive: true
-  maximum: 41952.0
-  minimum: 27968.0
+  maximum: 109871.99999999999
+  minimum: 73247.99999999999
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: destinationStrategy.ownFadActionWeightBias
   alwaysPositive: true
-  maximum: 17.245128
-  minimum: 11.496752
+  maximum: 31.640872180799995
+  minimum: 21.0939147872
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: destinationStrategy.deploymentBias
   alwaysPositive: true
-  maximum: 4.521359999999999
-  minimum: 3.0142399999999996
+  maximum: 12.94608
+  minimum: 8.630720000000002
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.HardEdgeOptimizationParameter
   addressToModify: destinationStrategy.minimumPercentageOfTripDurationAllowed
   alwaysPositive: true
   hardMaximum: 1.0
   hardMinimum: 0.0
-  maximum: 1.0330139999999999
-  minimum: 0.6886760000000001
+  maximum: 1.11171
+  minimum: 0.7411400000000001
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fadInitializerFactory.compressionExponents~Bigeye tuna
   alwaysPositive: true
-  maximum: 6.153420000000001
-  minimum: 4.10228
+  maximum: 3.70992
+  minimum: 2.4732800000000004
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fadInitializerFactory.compressionExponents~Skipjack tuna
   alwaysPositive: true
-  maximum: 3.8017199999999995
-  minimum: 2.5344800000000003
+  maximum: 2.26488
+  minimum: 1.5099200000000002
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fadInitializerFactory.compressionExponents~Yellowfin tuna
   alwaysPositive: true
-  maximum: 4.116
-  minimum: 2.744
+  maximum: 2.8016400000000004
+  minimum: 1.8677600000000003
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fadInitializerFactory.attractableBiomassCoefficients~Bigeye tuna
   alwaysPositive: true
-  maximum: 0.32976000000000005
-  minimum: 0.21984000000000004
+  maximum: 2.4364500000000002
+  minimum: 1.6243000000000003
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fadInitializerFactory.attractableBiomassCoefficients~Skipjack tuna
   alwaysPositive: true
-  maximum: 0.7535400000000001
-  minimum: 0.5023600000000001
+  maximum: 0.08592000000000007
+  minimum: 0.057280000000000046
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fadInitializerFactory.attractableBiomassCoefficients~Yellowfin
     tuna
   alwaysPositive: true
-  maximum: 1.2
-  minimum: 0.8
+  maximum: 0.18132000000000006
+  minimum: 0.12088000000000006
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fadInitializerFactory.biomassInteractionsCoefficients~Bigeye tuna
   alwaysPositive: true
-  maximum: 0.87576
-  minimum: 0.58384
+  maximum: 0.78933
+  minimum: 0.52622
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fadInitializerFactory.biomassInteractionsCoefficients~Skipjack
     tuna
   alwaysPositive: true
-  maximum: 0.001
-  minimum: 0.0
+  maximum: 0.95757
+  minimum: 0.6383800000000002
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fadInitializerFactory.biomassInteractionsCoefficients~Yellowfin
     tuna
   alwaysPositive: true
-  maximum: 1.2
-  minimum: 0.8
+  maximum: 1.2290699999999999
+  minimum: 0.81938
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fadInitializerFactory.growthRates~Bigeye tuna
   alwaysPositive: true
-  maximum: 0.8430000000000001
-  minimum: 0.5620000000000002
+  maximum: 1.14558
+  minimum: 0.7637200000000001
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fadInitializerFactory.growthRates~Skipjack tuna
   alwaysPositive: true
-  maximum: 1.2
-  minimum: 0.8
+  maximum: 2.5072799999999997
+  minimum: 1.6715200000000001
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fadInitializerFactory.growthRates~Yellowfin tuna
   alwaysPositive: true
-  maximum: 0.9498000000000001
-  minimum: 0.6332000000000001
+  maximum: 1.1720399999999997
+  minimum: 0.7813599999999999
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fadInitializerFactory.fishReleaseProbabilityInPercent
   alwaysPositive: true
-  maximum: 1.5771600004114201
-  minimum: 1.0514400002742803
+  maximum: 0.35999999999999993
+  minimum: 0.23999999999999996
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.HardEdgeOptimizationParameter
   addressToModify: fadInitializerFactory.parameterAlpha
   alwaysPositive: true
   hardMaximum: 10.0
   hardMinimum: 0.0
-  maximum: 1.33982526
-  minimum: 0.89321684
+  maximum: 4.0642499999999995
+  minimum: 2.7095000000000002
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.HardEdgeOptimizationParameter
   addressToModify: fadInitializerFactory.parameterBeta
   alwaysPositive: true
-  hardMaximum: 12.0
+  hardMaximum: 20.0
   hardMinimum: 0.0
-  maximum: 11.05632
-  minimum: 7.37088
+  maximum: 15.41556
+  minimum: 10.27704
+  rawNumber: false
+- !!uk.ac.ox.oxfish.maximization.generic.HardEdgeOptimizationParameter
+  addressToModify: fadInitializerFactory.fadDudRate
+  alwaysPositive: true
+  hardMaximum: 1.0
+  hardMinimum: 0.0
+  maximum: 0.8
+  minimum: 0
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: fadInitializerFactory.totalCarryingCapacity
   alwaysPositive: true
-  maximum: 431388.6
-  minimum: 287592.4
+  maximum: 286564.92859200004
+  minimum: 191043.28572800005
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.HardEdgeOptimizationParameter
   addressToModify: fadInitializerFactory.daysOfFadActivity
   alwaysPositive: true
   hardMaximum: 200.0
   hardMinimum: 10.0
-  maximum: 84.48899999999999
-  minimum: 56.326
+  maximum: 62.7576
+  minimum: 41.83840000000001
+  rawNumber: false
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+  addressToModify: destinationStrategy.noaBias
+  alwaysPositive: true
+  maximum: 1.126392
+  minimum: 0.750928
   rawNumber: false
 runsPerSetting: 1
-scenarioFile: inputs/tests/tunabacksliding/base_scenario.yaml
+scenarioFile: inputs/tests/tunabacksliding/scenario_logistic.yaml
 simulatedYears: 2
 targets:
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Number of FAD deployments
-  fixedTarget: 20497.0
+  fixedTarget: 26023.0
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Number of sets on own FADs
-  fixedTarget: 7799.0
+  fixedTarget: 9283.0
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Number of sets on others' FADs
-  fixedTarget: 2845.0
+  fixedTarget: 3935.0
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Number of non-associated sets
-  fixedTarget: 5220.0
+  fixedTarget: 6437.0
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Number of dolphin sets
-  fixedTarget: 8864.0
-  verbose: false
-  weight: 1.0
-- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
-  columnName: Sum of Bigeye tuna catches from sets on own FADs
-  fixedTarget: 4.6648383E7
-  verbose: false
-  weight: 1.0
-- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
-  columnName: Sum of Bigeye tuna catches from non-associated sets
-  fixedTarget: 1577000.0
-  verbose: false
-  weight: 1.0
-- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
-  columnName: Sum of Bigeye tuna catches from sets on others' FADs
-  fixedTarget: 1.5766617E7
+  fixedTarget: 9256.0
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Sum of Skipjack tuna catches from dolphin sets
-  fixedTarget: 1631000.0
-  verbose: false
-  weight: 1.0
-- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
-  columnName: Sum of Skipjack tuna catches from sets on own FADs
-  fixedTarget: 1.4222334E8
-  verbose: false
-  weight: 1.0
-- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
-  columnName: Sum of Skipjack tuna catches from non-associated sets
-  fixedTarget: 8.6583E7
-  verbose: false
-  weight: 1.0
-- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
-  columnName: Sum of Skipjack tuna catches from sets on others' FADs
-  fixedTarget: 4.6522663E7
+  fixedTarget: 1748000.0
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Sum of Yellowfin tuna catches from dolphin sets
-  fixedTarget: 1.09806E8
+  fixedTarget: 1.15374E8
+  verbose: false
+  weight: 1.0
+- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
+  columnName: Sum of Bigeye tuna catches from sets on own FADs
+  fixedTarget: 5.7227E7
+  verbose: false
+  weight: 1.0
+- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
+  columnName: Sum of Skipjack tuna catches from sets on own FADs
+  fixedTarget: 1.70068E8
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Sum of Yellowfin tuna catches from sets on own FADs
-  fixedTarget: 3.7821723E7
+  fixedTarget: 4.4697E7
+  verbose: false
+  weight: 1.0
+- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
+  columnName: Sum of Bigeye tuna catches from non-associated sets
+  fixedTarget: 1855000.0
+  verbose: false
+  weight: 1.0
+- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
+  columnName: Sum of Skipjack tuna catches from non-associated sets
+  fixedTarget: 1.11794E8
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Sum of Yellowfin tuna catches from non-associated sets
-  fixedTarget: 2.7232E7
+  fixedTarget: 3.288E7
+  verbose: false
+  weight: 1.0
+- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
+  columnName: Sum of Bigeye tuna catches from sets on others' FADs
+  fixedTarget: 1.9196E7
+  verbose: false
+  weight: 1.0
+- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
+  columnName: Sum of Skipjack tuna catches from sets on others' FADs
+  fixedTarget: 6.0485E7
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Sum of Yellowfin tuna catches from sets on others' FADs
-  fixedTarget: 1.4048277E7
+  fixedTarget: 1.8262E7
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Average Trip Duration
-  fixedTarget: 823.2038601
+  fixedTarget: 849.2099699
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Bigeye tuna Catches (kg)
-  fixedTarget: 6.3993E7
+  fixedTarget: 7.8281E7
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Skipjack tuna Catches (kg)
-  fixedTarget: 2.7696E8
+  fixedTarget: 3.44095E8
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Yellowfin tuna Catches (kg)
-  fixedTarget: 1.88908E8
+  fixedTarget: 2.11213E8
   verbose: false
   weight: 1.0
 translateNANto: 1.0E7
