--- a/inputs/tests/tunabacksliding/linear.yaml
+++ b/inputs/tests/tunabacksliding/linear.yaml
@@ -1,9 +1,6 @@
 EPO Abundance Pathfinding:
-  gearStrategy:
-    FAD Refill:
-      maxFadDeploymentsFile: inputs/epo_inputs/tests/backsliding/max_deployments.csv
   abundanceFiltersFactory:
-    selectivityFilePath: inputs/epo_inputs/abundance/selectivity.csv
+    selectivityFilePath: inputs/epo_inputs/abundance/selectivity_wa_len.csv
   abundanceInitializerFactory:
     Abundance Initializer Factory:
       binsFilePath: inputs/epo_inputs/abundance/bins.csv
@@ -26,6 +23,8 @@ EPO Abundance Pathfinding:
         limitClass5: 120
         limitClass6a: 300
         limitClass6b: 450
+    allSetsObservers: !!set {
+      }
     biomassLostMonitor: null
     decayRateOfDeploymentLocationValues: 0.01
     decayRateOfDolphinSetLocationValues: 0.01
@@ -47,7 +46,7 @@ EPO Abundance Pathfinding:
     fadInitializerFactory: null
     fadSetObservers: !!set {
       }
-    locationValuesFile: inputs/epo_inputs/tests/backsliding/location_values.csv
+    locationValuesFile: inputs/epo_inputs/location_values.csv
     nonAssociatedSetObservers: !!set {
       }
     nonAssociatedSetTimeSinceLastVisitModulationFunction:
@@ -74,7 +73,7 @@ EPO Abundance Pathfinding:
       Compressed Exponential Function:
         coefficient: 1.0E-6
         exponent: 2.0
-    successfulSetProbability: '0.9231701'
+    successfulSetProbability: '0.9290048914'
   abundanceReallocatorFactory: !!uk.ac.ox.oxfish.biology.tuna.AbundanceReallocatorFactory
     biomassDistributionsFilePath: inputs/epo_inputs/abundance/grids.csv
     firstLargeBinPerSpecies:
@@ -84,66 +83,76 @@ EPO Abundance Pathfinding:
   abundanceRestorerFactory:
     schedule:
       0: 365
-  attractionWeightsFile: inputs/epo_inputs/tests/backsliding/action_weights.csv
+  attractionWeightsFile: inputs/epo_inputs/action_weights.csv
+  catchSamplersFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.samplers.AbundanceCatchSamplersFactory
+    abundanceFilters: null
+    catchSamplesFile: inputs/epo_inputs/set_samples.csv
+    yearlyReset: true
   costsFile: inputs/epo_inputs/costs.csv
   destinationStrategy:
-    additionalHourlyDelayDeployment: '0.1'
-    additionalHourlyDelayDolphinSets: '5.0'
-    additionalHourlyDelayNonAssociatedSets: '5.0'
+    additionalHourlyDelayDeployment: '0.16007117399999998'
+    additionalHourlyDelayDolphinSets: '13.923288015'
+    additionalHourlyDelayNonAssociatedSets: '0.00136135'
     attractionWeightsFile: inputs/epo_inputs/location_values.csv
     catchSamplersFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.samplers.AbundanceCatchSamplersFactory
       abundanceFilters: null
-      catchSamplesFile: inputs/epo_inputs/tests/backsliding/set_samples.csv
-    deploymentBias: '1.0'
+      catchSamplesFile: inputs/epo_inputs/set_samples.csv
+      yearlyReset: true
+    delSetsRangeInSeatiles: '3.0'
+    deploymentBias: '2.604800592000001'
     fadModule:
       Centroid FAD Planning:
         bannedXCoordinateBounds: ''
         bannedYCoordinateBounds: ''
         discretization:
           Squared Discretization:
-            horizontalSplits: '5'
-            verticalSplits: '3'
+            horizontalSplits: '6.0'
+            verticalSplits: '3.0'
         distancePenalty: '9.819280341'
         minimumValueFadSets: '6971.021459999999'
     hoursWastedOnFailedSearches: '1.4932888800000002'
-    maxTripDurationFile: inputs/epo_inputs/tests/backsliding/boats.csv
-    minimumValueOpportunisticFadSets: '5000.0'
-    ownFadActionWeightBias: '1.0'
-    minimumPercentageOfTripDurationAllowed: '1.0'
+    maxTripDurationFile: inputs/epo_inputs/boats.csv
+    minimumPercentageOfTripDurationAllowed: '0.49857107480000007'
+    minimumValueOpportunisticFadSets: '15751.502999999999'
+    noaBias: '0.33585299999999996'
+    noaSetsCanPoachFads: false
+    noaSetsRangeInSeatiles: '3.0'
+    ownFadActionWeightBias: '5.5583959919999995'
     planningHorizonInHours: '168.0'
-    purgeIllegalActionsImmediately: false
+    purgeIllegalActionsImmediately: true
+    uniqueCatchSamplerForEachStrategy: false
   fadInitializerFactory:
-    Abundance FAD Beta Initializer With Expiration:
-      daysOfFadActivity: '50.0'    
-      attractableBiomassCoefficients:
-        Bigeye tuna: '0.0'
-        Yellowfin tuna: '0.0'
-        Skipjack tuna: '0.0'
-      biomassInteractionsCoefficients:
-        Bigeye tuna: '0.0'
-        Yellowfin tuna: '0.0'
-        Skipjack tuna: '0.0'
-      compressionExponents:
-        Bigeye tuna: '0.0'
-        Yellowfin tuna: '0.0'
-        Skipjack tuna: '0.0'
-      parameterAlpha: .5
-      parameterBeta: 5
-      fishReleaseProbabilityInPercent: '0.0'
-      growthRates:
-        Bigeye tuna: '0.0'
-        Yellowfin tuna: '0.0'
-        Skipjack tuna: '0.0'
+    Weibull FAD Catchability Selectivity Initializer:
+      carryingCapacityScaleParameters:
+        Skipjack tuna: 20184.356479
+        Bigeye tuna: 3837.1589712
+        Yellowfin tuna: 5555.4975104000005
+      carryingCapacityShapeParameters:
+        Skipjack tuna: 1.27044288
+        Bigeye tuna: 0.75079598575
+        Yellowfin tuna: 1.61254658332
+      catchabilities:
+        Skipjack tuna: 0.0077224940063999985
+        Bigeye tuna: 0.0935982662712
+        Yellowfin tuna: 0.0147521187164
+      daysInWaterBeforeAttraction: '0.19832147999999988'
+      fadDudRate: '3.6760000000000004E-4'
+      fishReleaseProbabilityInPercent: '0.05153178693184275'
+      maximumDaysAttractions: '19.71109917000001'
       selectivityFilters: {
         }
-      speciesCodes: null
-      totalCarryingCapacity: '445000.0'
   fadMapFactory: !!uk.ac.ox.oxfish.geography.fads.GenericFadMapFactory
     currentFiles:
       Y2016: inputs/epo_inputs/currents/currents_2016.csv
       Y2017: inputs/epo_inputs/currents/currents_2017.csv
+    inputIsMetersPerSecond: true
   fishingStrategyFactory: Default to Destination Strategy
-  locationValuesFilePath: inputs/epo_inputs/tests/backsliding/location_values_all2017.csv
+  gearStrategy:
+    FAD Refill:
+      fadCost: 1000.0
+      maxFadDeploymentsFile: inputs/epo_inputs/max_deployments.csv
+      targetYear: 2017
+  locationValuesFilePath: inputs/epo_inputs/location_values.csv
   mapInitializerFactory:
     From File Map:
       gridWidthInCell: '101.0'
@@ -151,6 +160,7 @@ EPO Abundance Pathfinding:
       latLong: true
       mapFile: inputs/epo_inputs/depth.csv
       mapPaddingInDegrees: '0.5'
+  purseSeineGearFactory: null
   recruitmentProcessesFactory:
     recruitmentParametersFilePath: inputs/epo_inputs/abundance/recruitment_parameters.csv
   regulationsFactory: !!uk.ac.ox.oxfish.model.scenario.StandardIattcRegulationsFactory
@@ -183,13 +193,20 @@ EPO Abundance Pathfinding:
     - closure A
     - closure B
   scheduledAbundanceProcessesFactory:
-    abundanceMortalityProcessFactory: null
+    abundanceMortalityProcessFactory: !!uk.ac.ox.oxfish.biology.tuna.AbundanceMortalityProcessFromFileFactory
+      mortalityFile: inputs/epo_inputs/abundance/mortality.csv
+      sources:
+      - natural
+      - obj_class_1_5
+      - noa_class_1_5
+      - longline
+      speciesCodes: null
     biologicalProcessesDates:
     - '2017-01-01'
     - '2017-04-01'
     - '2017-07-01'
     - '2017-10-01'
     recruitmentProcesses: null
+  vesselsFilePath: inputs/epo_inputs/boats.csv
   zapper: true
   zapperAge: false
-  vesselsFilePath: inputs/epo_inputs/tests/backsliding/boats.csv
