--- a/inputs/tests/tunabacksliding/linear_calibration.yaml
+++ b/inputs/tests/tunabacksliding/linear_calibration.yaml
@@ -4,14 +4,14 @@ parameters:
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: destinationStrategy.additionalHourlyDelayDeployment
   alwaysPositive: true
-  maximum: 0.8131800000000001
-  minimum: 0.54212
+  maximum: 0.16307999999999997
+  minimum: 0.10872
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: destinationStrategy.additionalHourlyDelayDolphinSets
   alwaysPositive: true
-  maximum: 6.632639999999999
-  minimum: 4.42176
+  maximum: 15.925980000000001
+  minimum: 10.617320000000001
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: destinationStrategy.additionalHourlyDelayNonAssociatedSets
@@ -22,260 +22,253 @@ parameters:
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: destinationStrategy.fadModule.distancePenalty
   alwaysPositive: true
-  maximum: 2.943576
-  minimum: 1.9623840000000001
+  maximum: 4.99887
+  minimum: 3.33258
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: destinationStrategy.hoursWastedOnFailedSearches
   alwaysPositive: true
-  maximum: 5.654639999999999
-  minimum: 3.7697599999999998
+  maximum: 2.1402
+  minimum: 1.4268
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: destinationStrategy.fadModule.minimumValueFadSets
   alwaysPositive: true
-  maximum: 60000.0
-  minimum: 40000.0
+  maximum: 11494.799999999997
+  minimum: 7663.199999999999
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: destinationStrategy.minimumValueOpportunisticFadSets
   alwaysPositive: true
-  maximum: 41952.0
-  minimum: 27968.0
+  maximum: 37665.0
+  minimum: 25110.0
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: destinationStrategy.ownFadActionWeightBias
   alwaysPositive: true
-  maximum: 17.245128
-  minimum: 11.496752
+  maximum: 6.042719999999999
+  minimum: 4.02848
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
   addressToModify: destinationStrategy.deploymentBias
   alwaysPositive: true
-  maximum: 4.521359999999999
-  minimum: 3.0142399999999996
+  maximum: 6.17544
+  minimum: 4.116960000000001
+  rawNumber: false
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+  addressToModify: destinationStrategy.noaBias
+  alwaysPositive: true
+  maximum: 0.42
+  minimum: 0.27999999999999997
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.HardEdgeOptimizationParameter
   addressToModify: destinationStrategy.minimumPercentageOfTripDurationAllowed
   alwaysPositive: true
+  hardMaximum: 0.6
+  hardMinimum: 0.1
+  maximum: 0.5147160000000001
+  minimum: 0.34314400000000006
+  rawNumber: false
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+  addressToModify: fadInitializerFactory.carryingCapacityScaleParameters~Bigeye tuna
+  alwaysPositive: true
+  maximum: 5095.152
+  minimum: 3396.768
+  rawNumber: true
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+  addressToModify: fadInitializerFactory.carryingCapacityScaleParameters~Skipjack
+    tuna
+  alwaysPositive: true
+  maximum: 20727.059999999998
+  minimum: 13818.04
+  rawNumber: true
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+  addressToModify: fadInitializerFactory.carryingCapacityScaleParameters~Yellowfin
+    tuna
+  alwaysPositive: true
+  maximum: 6416.112
+  minimum: 4277.408
+  rawNumber: true
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+  addressToModify: fadInitializerFactory.carryingCapacityShapeParameters~Bigeye tuna
+  alwaysPositive: true
+  maximum: 0.7269285
+  minimum: 0.484619
+  rawNumber: true
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+  addressToModify: fadInitializerFactory.carryingCapacityShapeParameters~Skipjack
+    tuna
+  alwaysPositive: true
+  maximum: 0.9797760000000001
+  minimum: 0.6531840000000001
+  rawNumber: true
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+  addressToModify: fadInitializerFactory.carryingCapacityShapeParameters~Yellowfin
+    tuna
+  alwaysPositive: true
+  maximum: 0.9709944
+  minimum: 0.6473296000000001
+  rawNumber: true
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+  addressToModify: fadInitializerFactory.catchabilities~Bigeye tuna
+  alwaysPositive: true
+  maximum: 0.055816248000000006
+  minimum: 0.037210832000000006
+  rawNumber: true
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+  addressToModify: fadInitializerFactory.catchabilities~Skipjack tuna
+  alwaysPositive: true
+  maximum: 0.011676863999999997
+  minimum: 0.007784575999999999
+  rawNumber: true
+- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+  addressToModify: fadInitializerFactory.catchabilities~Yellowfin tuna
+  alwaysPositive: true
+  maximum: 0.014217996
+  minimum: 0.009478664000000001
+  rawNumber: true
+- !!uk.ac.ox.oxfish.maximization.generic.HardEdgeOptimizationParameter
+  addressToModify: fadInitializerFactory.daysInWaterBeforeAttraction
+  alwaysPositive: true
+  hardMaximum: 2.147483647E9
+  hardMinimum: 0.0
+  maximum: 0.6380999999999997
+  minimum: 0.4253999999999998
+  rawNumber: false
+- !!uk.ac.ox.oxfish.maximization.generic.HardEdgeOptimizationParameter
+  addressToModify: fadInitializerFactory.maximumDaysAttractions
+  alwaysPositive: true
+  hardMaximum: 2.147483647E9
+  hardMinimum: 1.0
+  maximum: 53.0082
+  minimum: 35.338800000000006
+  rawNumber: false
+- !!uk.ac.ox.oxfish.maximization.generic.HardEdgeOptimizationParameter
+  addressToModify: fadInitializerFactory.fadDudRate
+  alwaysPositive: true
   hardMaximum: 1.0
   hardMinimum: 0.0
-  maximum: 1.0330139999999999
-  minimum: 0.6886760000000001
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
-  addressToModify: fadInitializerFactory.compressionExponents~Bigeye tuna
-  alwaysPositive: true
-  maximum: 6.153420000000001
-  minimum: 4.10228
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
-  addressToModify: fadInitializerFactory.compressionExponents~Skipjack tuna
-  alwaysPositive: true
-  maximum: 3.8017199999999995
-  minimum: 2.5344800000000003
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
-  addressToModify: fadInitializerFactory.compressionExponents~Yellowfin tuna
-  alwaysPositive: true
-  maximum: 4.116
-  minimum: 2.744
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
-  addressToModify: fadInitializerFactory.attractableBiomassCoefficients~Bigeye tuna
-  alwaysPositive: true
-  maximum: 0.32976000000000005
-  minimum: 0.21984000000000004
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
-  addressToModify: fadInitializerFactory.attractableBiomassCoefficients~Skipjack tuna
-  alwaysPositive: true
-  maximum: 0.7535400000000001
-  minimum: 0.5023600000000001
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
-  addressToModify: fadInitializerFactory.attractableBiomassCoefficients~Yellowfin
-    tuna
-  alwaysPositive: true
-  maximum: 1.2
-  minimum: 0.8
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
-  addressToModify: fadInitializerFactory.biomassInteractionsCoefficients~Bigeye tuna
-  alwaysPositive: true
-  maximum: 0.87576
-  minimum: 0.58384
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
-  addressToModify: fadInitializerFactory.biomassInteractionsCoefficients~Skipjack
-    tuna
-  alwaysPositive: true
   maximum: 0.001
   minimum: 0.0
   rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
-  addressToModify: fadInitializerFactory.biomassInteractionsCoefficients~Yellowfin
-    tuna
-  alwaysPositive: true
-  maximum: 1.2
-  minimum: 0.8
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
-  addressToModify: fadInitializerFactory.growthRates~Bigeye tuna
-  alwaysPositive: true
-  maximum: 0.8430000000000001
-  minimum: 0.5620000000000002
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
-  addressToModify: fadInitializerFactory.growthRates~Skipjack tuna
-  alwaysPositive: true
-  maximum: 1.2
-  minimum: 0.8
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
-  addressToModify: fadInitializerFactory.growthRates~Yellowfin tuna
-  alwaysPositive: true
-  maximum: 0.9498000000000001
-  minimum: 0.6332000000000001
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
+- !!uk.ac.ox.oxfish.maximization.generic.HardEdgeOptimizationParameter
   addressToModify: fadInitializerFactory.fishReleaseProbabilityInPercent
   alwaysPositive: true
-  maximum: 1.5771600004114201
-  minimum: 1.0514400002742803
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.HardEdgeOptimizationParameter
-  addressToModify: fadInitializerFactory.parameterAlpha
-  alwaysPositive: true
-  hardMaximum: 10.0
+  hardMaximum: 3.5
   hardMinimum: 0.0
-  maximum: 1.33982526
-  minimum: 0.89321684
+  maximum: 0.06516000117828001
+  minimum: 0.04344000078552002
   rawNumber: false
 - !!uk.ac.ox.oxfish.maximization.generic.HardEdgeOptimizationParameter
-  addressToModify: fadInitializerFactory.parameterBeta
+  addressToModify: abundancePurseSeineGearFactory.successfulSetProbability
   alwaysPositive: true
-  hardMaximum: 12.0
-  hardMinimum: 0.0
-  maximum: 11.05632
-  minimum: 7.37088
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.SimpleOptimizationParameter
-  addressToModify: fadInitializerFactory.totalCarryingCapacity
-  alwaysPositive: true
-  maximum: 431388.6
-  minimum: 287592.4
-  rawNumber: false
-- !!uk.ac.ox.oxfish.maximization.generic.HardEdgeOptimizationParameter
-  addressToModify: fadInitializerFactory.daysOfFadActivity
-  alwaysPositive: true
-  hardMaximum: 200.0
-  hardMinimum: 10.0
-  maximum: 84.48899999999999
-  minimum: 56.326
+  hardMaximum: 1.0
+  hardMinimum: 0.8
+  maximum: 1.121964
+  minimum: 0.747976
   rawNumber: false
 runsPerSetting: 1
-scenarioFile: inputs/tests/tunabacksliding/base_scenario.yaml
+scenarioFile: inputs/tests/tunabacksliding/linear.yaml
 simulatedYears: 2
 targets:
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Number of FAD deployments
-  fixedTarget: 20497.0
+  fixedTarget: 27397.0
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Number of sets on own FADs
-  fixedTarget: 7799.0
+  fixedTarget: 7483.0
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Number of sets on others' FADs
-  fixedTarget: 2845.0
+  fixedTarget: 3090.0
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Number of non-associated sets
-  fixedTarget: 5220.0
+  fixedTarget: 5472.0
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Number of dolphin sets
-  fixedTarget: 8864.0
-  verbose: false
-  weight: 1.0
-- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
-  columnName: Sum of Bigeye tuna catches from sets on own FADs
-  fixedTarget: 4.6648383E7
-  verbose: false
-  weight: 1.0
-- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
-  columnName: Sum of Bigeye tuna catches from non-associated sets
-  fixedTarget: 1577000.0
-  verbose: false
-  weight: 1.0
-- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
-  columnName: Sum of Bigeye tuna catches from sets on others' FADs
-  fixedTarget: 1.5766617E7
+  fixedTarget: 8768.0
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Sum of Skipjack tuna catches from dolphin sets
-  fixedTarget: 1631000.0
-  verbose: false
-  weight: 1.0
-- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
-  columnName: Sum of Skipjack tuna catches from sets on own FADs
-  fixedTarget: 1.4222334E8
-  verbose: false
-  weight: 1.0
-- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
-  columnName: Sum of Skipjack tuna catches from non-associated sets
-  fixedTarget: 8.6583E7
-  verbose: false
-  weight: 1.0
-- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
-  columnName: Sum of Skipjack tuna catches from sets on others' FADs
-  fixedTarget: 4.6522663E7
+  fixedTarget: 1621000.0
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Sum of Yellowfin tuna catches from dolphin sets
-  fixedTarget: 1.09806E8
+  fixedTarget: 1.08274E8
+  verbose: false
+  weight: 1.0
+- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
+  columnName: Sum of Bigeye tuna catches from sets on own FADs
+  fixedTarget: 4.6188E7
+  verbose: false
+  weight: 1.0
+- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
+  columnName: Sum of Skipjack tuna catches from sets on own FADs
+  fixedTarget: 1.3866E8
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Sum of Yellowfin tuna catches from sets on own FADs
-  fixedTarget: 3.7821723E7
+  fixedTarget: 3.6789E7
+  verbose: false
+  weight: 1.0
+- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
+  columnName: Sum of Bigeye tuna catches from non-associated sets
+  fixedTarget: 1555000.0
+  verbose: false
+  weight: 1.0
+- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
+  columnName: Sum of Skipjack tuna catches from non-associated sets
+  fixedTarget: 8.9138E7
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Sum of Yellowfin tuna catches from non-associated sets
-  fixedTarget: 2.7232E7
+  fixedTarget: 2.8344E7
+  verbose: false
+  weight: 1.0
+- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
+  columnName: Sum of Bigeye tuna catches from sets on others' FADs
+  fixedTarget: 1.4516E7
+  verbose: false
+  weight: 1.0
+- !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
+  columnName: Sum of Skipjack tuna catches from sets on others' FADs
+  fixedTarget: 4.4836E7
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Sum of Yellowfin tuna catches from sets on others' FADs
-  fixedTarget: 1.4048277E7
+  fixedTarget: 1.467E7
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Average Trip Duration
-  fixedTarget: 823.2038601
+  fixedTarget: 833.9759066
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Bigeye tuna Catches (kg)
-  fixedTarget: 6.3993E7
+  fixedTarget: 6.226E7
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Skipjack tuna Catches (kg)
-  fixedTarget: 2.7696E8
+  fixedTarget: 2.74255E8
   verbose: false
   weight: 1.0
 - !!uk.ac.ox.oxfish.maximization.generic.SmapeDataTarget
   columnName: Yellowfin tuna Catches (kg)
-  fixedTarget: 1.88908E8
+  fixedTarget: 1.88077E8
   verbose: false
   weight: 1.0
 translateNANto: 1.0E7
