--- a/inputs/tests/tunabacksliding/scenario_logistic.yaml
+++ b/inputs/tests/tunabacksliding/scenario_logistic.yaml
@@ -1,9 +1,6 @@
 EPO Abundance Pathfinding:
-  gearStrategy:
-    FAD Refill:
-      maxFadDeploymentsFile: inputs/epo_inputs/tests/backsliding/max_deployments.csv
   abundanceFiltersFactory:
-    selectivityFilePath: inputs/epo_inputs/abundance/selectivity.csv
+    selectivityFilePath: inputs/epo_inputs/abundance/selectivity_wa_len.csv
   abundanceInitializerFactory:
     Abundance Initializer Factory:
       binsFilePath: inputs/epo_inputs/abundance/bins.csv
@@ -26,6 +23,8 @@ EPO Abundance Pathfinding:
         limitClass5: 120
         limitClass6a: 300
         limitClass6b: 450
+    allSetsObservers: !!set {
+      }
     biomassLostMonitor: null
     decayRateOfDeploymentLocationValues: 0.01
     decayRateOfDolphinSetLocationValues: 0.01
@@ -47,7 +46,7 @@ EPO Abundance Pathfinding:
     fadInitializerFactory: null
     fadSetObservers: !!set {
       }
-    locationValuesFile: inputs/epo_inputs/tests/backsliding/location_values.csv
+    locationValuesFile: inputs/epo_inputs/location_values.csv
     nonAssociatedSetObservers: !!set {
       }
     nonAssociatedSetTimeSinceLastVisitModulationFunction:
@@ -84,17 +83,21 @@ EPO Abundance Pathfinding:
   abundanceRestorerFactory:
     schedule:
       0: 365
-  attractionWeightsFile: inputs/epo_inputs/tests/backsliding/action_weights.csv
+  attractionWeightsFile: inputs/epo_inputs/action_weights.csv
+  catchSamplersFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.samplers.AbundanceCatchSamplersFactory
+    abundanceFilters: null
+    catchSamplesFile: inputs/epo_inputs/set_samples.csv
   costsFile: inputs/epo_inputs/costs.csv
   destinationStrategy:
-    additionalHourlyDelayDeployment: '0.1'
-    additionalHourlyDelayDolphinSets: '5.0'
-    additionalHourlyDelayNonAssociatedSets: '5.0'
-    attractionWeightsFile: inputs/epo_inputs/location_values.csv
+    additionalHourlyDelayDeployment: '0.0'
+    additionalHourlyDelayDolphinSets: '15.990692562369254'
+    additionalHourlyDelayNonAssociatedSets: '6.174315160373708'
+    attractionWeightsFile: 'inputs/epo_inputs/location_values.csv'
     catchSamplersFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.samplers.AbundanceCatchSamplersFactory
       abundanceFilters: null
-      catchSamplesFile: inputs/epo_inputs/tests/backsliding/set_samples.csv
-    deploymentBias: '1.0'
+      catchSamplesFile: inputs/epo_inputs/set_samples.csv
+    deploymentBias: '11.291191913413678'
+    hoursWastedOnFailedSearches: '5.02110682183951'
     fadModule:
       Centroid FAD Planning:
         bannedXCoordinateBounds: ''
@@ -105,45 +108,47 @@ EPO Abundance Pathfinding:
             verticalSplits: '3'
         distancePenalty: '9.819280341'
         minimumValueFadSets: '6971.021459999999'
-    hoursWastedOnFailedSearches: '1.4932888800000002'
-    maxTripDurationFile: inputs/epo_inputs/tests/backsliding/boats.csv
-    minimumValueOpportunisticFadSets: '5000.0'
-    ownFadActionWeightBias: '1.0'
+    maxTripDurationFile: 'inputs/epo_inputs/boats.csv'
     minimumPercentageOfTripDurationAllowed: '1.0'
+    minimumValueOpportunisticFadSets: '0.0'
+    noaBias: '0.4620536789957029'
+    noaSetsCanPoachFads: true
+    noaSetsRangeInSeatiles: '3.0'
     planningHorizonInHours: '168.0'
-    purgeIllegalActionsImmediately: false
+    purgeIllegalActionsImmediately: true
   fadInitializerFactory:
     Abundance FAD Beta Initializer With Expiration:
-      daysOfFadActivity: '50.0'    
       attractableBiomassCoefficients:
-        Bigeye tuna: '0.0'
-        Yellowfin tuna: '0.0'
-        Skipjack tuna: '0.0'
+        Bigeye tuna: '1.8591190214481352'
+        Yellowfin tuna: '0.05191100840190857'
+        Skipjack tuna: '0.005918504881425812'
       biomassInteractionsCoefficients:
-        Bigeye tuna: '0.0'
+        Bigeye tuna: '0.8548066858000398'
         Yellowfin tuna: '0.0'
-        Skipjack tuna: '0.0'
+        Skipjack tuna: '0.6756061409142016'
       compressionExponents:
-        Bigeye tuna: '0.0'
-        Yellowfin tuna: '0.0'
-        Skipjack tuna: '0.0'
-      parameterAlpha: .5
-      parameterBeta: 5
+        Bigeye tuna: '0.063221894371432'
+        Yellowfin tuna: '2.2791343397895587'
+        Skipjack tuna: '1.7077080239638733'
+      daysOfFadActivity: '55.6968265285037'
+      fadDudRate: '0.0'
       fishReleaseProbabilityInPercent: '0.0'
       growthRates:
-        Bigeye tuna: '0.0'
-        Yellowfin tuna: '0.0'
-        Skipjack tuna: '0.0'
+        Bigeye tuna: '0.9997964492277944'
+        Yellowfin tuna: '1.0534539448435336'
+        Skipjack tuna: '2.2030496831998443'
+      parameterAlpha: '2.3562746680761526'
+      parameterBeta: '20.0'
       selectivityFilters: {
         }
       speciesCodes: null
-      totalCarryingCapacity: '445000.0'
-  fadMapFactory: !!uk.ac.ox.oxfish.geography.fads.GenericFadMapFactory
+      totalCarryingCapacity: '313955.9902017746'
+  fadMapFactory: !!uk.ac.ox.oxfish.geography.fads.AbundanceFadMapFactory
     currentFiles:
       Y2016: inputs/epo_inputs/currents/currents_2016.csv
       Y2017: inputs/epo_inputs/currents/currents_2017.csv
   fishingStrategyFactory: Default to Destination Strategy
-  locationValuesFilePath: inputs/epo_inputs/tests/backsliding/location_values_all2017.csv
+  locationValuesFilePath: inputs/epo_inputs/location_values.csv
   mapInitializerFactory:
     From File Map:
       gridWidthInCell: '101.0'
@@ -151,6 +156,7 @@ EPO Abundance Pathfinding:
       latLong: true
       mapFile: inputs/epo_inputs/depth.csv
       mapPaddingInDegrees: '0.5'
+  purseSeineGearFactory: null
   recruitmentProcessesFactory:
     recruitmentParametersFilePath: inputs/epo_inputs/abundance/recruitment_parameters.csv
   regulationsFactory: !!uk.ac.ox.oxfish.model.scenario.StandardIattcRegulationsFactory
@@ -183,13 +189,20 @@ EPO Abundance Pathfinding:
     - closure A
     - closure B
   scheduledAbundanceProcessesFactory:
-    abundanceMortalityProcessFactory: null
+    abundanceMortalityProcessFactory: !!uk.ac.ox.oxfish.biology.tuna.AbundanceMortalityProcessFromFileFactory
+      mortalityFile: inputs/epo_inputs/abundance/mortality.csv
+      sources:
+      - natural
+      - obj_class_1_5
+      - noa_class_1_5
+      - longline
+      speciesCodes: null
     biologicalProcessesDates:
     - '2017-01-01'
     - '2017-04-01'
     - '2017-07-01'
     - '2017-10-01'
     recruitmentProcesses: null
+  vesselsFilePath: inputs/epo_inputs/boats.csv
   zapper: true
   zapperAge: false
-  vesselsFilePath: inputs/epo_inputs/tests/backsliding/boats.csv
