--- a/inputs/tests/tunabacksliding/linear.yaml
+++ b/inputs/tests/tunabacksliding/linear.yaml
@@ -141,6 +141,7 @@ EPO Abundance Pathfinding:
     currentFiles:
       Y2016: inputs/epo_inputs/currents/currents_2016_dead_cells.csv
       Y2017: inputs/epo_inputs/currents/currents_2017_dead_cells.csv
+      Y2018: inputs/epo_inputs/currents/currents_2018_dead_cells.csv
     inputIsMetersPerSecond: true
   fishingStrategyFactory: Default to Destination Strategy
   gearStrategy:
