--- a/inputs/tests/tunabacksliding/scenario_logistic.yaml
+++ b/inputs/tests/tunabacksliding/scenario_logistic.yaml
@@ -143,6 +143,7 @@ EPO Abundance Pathfinding:
     currentFiles:
       Y2016: inputs/epo_inputs/currents/currents_2016_dead_cells.csv
       Y2017: inputs/epo_inputs/currents/currents_2017_dead_cells.csv
+      Y2018: inputs/epo_inputs/currents/currents_2018_dead_cells.csv
   fishingStrategyFactory: Default to Destination Strategy
   locationValuesFilePath: inputs/epo_inputs/location_values.csv
   mapInitializerFactory:
