load IATTC closure period from data instead of assigning randomly
closes https://github.com/poseidon-fisheries/tuna/issues/208

I factored out the old behaviour in a new `IattcClosurePeriodRandomizer`
so we can still get it randomly. That was needed to keep the backsliding
tests happy anyway.

--- a/inputs/tests/tunabacksliding/base_scenario.yaml
+++ b/inputs/tests/tunabacksliding/base_scenario.yaml
@@ -193,3 +193,6 @@ EPO Abundance Pathfinding:
   zapper: true
   zapperAge: false
   vesselsFilePath: inputs/epo_inputs/tests/backsliding/boats.csv
+  additionalStartables:
+    - IATTC Closure Period Randomizer:
+        proportionOfBoatsInClosureA: 0.5
