--- a/inputs/tests/tunabacksliding/scenario_logistic.yaml
+++ b/inputs/tests/tunabacksliding/scenario_logistic.yaml
@@ -203,3 +203,6 @@ EPO Abundance Pathfinding:
   vesselsFilePath: inputs/epo_inputs/boats.csv
   zapper: true
   zapperAge: false
+  additionalStartables:
+    - IATTC Closure Period Randomizer:
+        proportionOfBoatsInClosureA: 0.5
