start migration to configurable input path

--- a/POSEIDON/inputs/tests/tunabacksliding/linear.yaml
+++ b/POSEIDON/inputs/tests/tunabacksliding/linear.yaml
@@ -46,7 +46,9 @@ EPO Abundance Pathfinding:
     fadInitializerFactory: null
     fadSetObservers: !!set {
       }
+    fishValueCalculatorStandardDeviation: '0.0'
     locationValuesFile: inputs/epo_inputs/location_values.csv
+    maxCurrentSpeedsFile: inputs/epo_inputs/max_current_speeds.csv
     nonAssociatedSetObservers: !!set {
       }
     nonAssociatedSetTimeSinceLastVisitModulationFunction:
@@ -79,10 +81,17 @@ EPO Abundance Pathfinding:
   abundanceRestorerFactory:
     schedule:
       0: 365
+  additionalStartables:
+  - IATTC Closure Period Randomizer:
+      proportionOfBoatsInClosureA: '0.5'
   attractionWeightsFile: inputs/epo_inputs/action_weights.csv
   catchSamplersFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.samplers.AbundanceCatchSamplersFactory
     abundanceFilters: null
     catchSamplesFile: inputs/epo_inputs/set_samples.csv
+    speciesCodesSupplier: &id002 !!uk.ac.ox.oxfish.biology.SpeciesCodesFromFileFactory
+      inputsFolder: &id001
+        path: inputs/epo_inputs
+      speciesCodeFile: species_codes.csv
     yearlyReset: true
   costsFile: inputs/epo_inputs/costs.csv
   destinationStrategy:
@@ -93,6 +102,7 @@ EPO Abundance Pathfinding:
     catchSamplersFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.samplers.AbundanceCatchSamplersFactory
       abundanceFilters: null
       catchSamplesFile: inputs/epo_inputs/set_samples.csv
+      speciesCodesSupplier: null
       yearlyReset: true
     delSetsRangeInSeatiles: '3.0'
     deploymentBias: '2.604800592000001'
@@ -149,6 +159,7 @@ EPO Abundance Pathfinding:
       fadCost: 1000.0
       maxFadDeploymentsFile: inputs/epo_inputs/max_deployments.csv
       targetYear: 2017
+  inputFolder: *id001
   locationValuesFilePath: inputs/epo_inputs/location_values.csv
   mapInitializerFactory:
     From File Map:
@@ -157,6 +168,9 @@ EPO Abundance Pathfinding:
       latLong: true
       mapFile: inputs/epo_inputs/depth.csv
       mapPaddingInDegrees: '0.5'
+  marketMapFactory: !!uk.ac.ox.oxfish.model.market.YearlyMarketMapFromPriceFileFactory
+    priceFilePath: inputs/epo_inputs/prices.csv
+    speciesCodes: null
   purseSeineGearFactory: null
   recruitmentProcessesFactory:
     recruitmentParametersFilePath: inputs/epo_inputs/abundance/recruitment_parameters.csv
@@ -177,10 +191,11 @@ EPO Abundance Pathfinding:
       Temporary Regulation:
         delegate:
           Specific MPA from Coordinates:
-            eastLongitude: '-96.0'
-            northLatitude: '4.0'
-            southLatitude: '-3.0'
-            westLongitude: '-110.0'
+            eastLongitude: -96.0
+            name: null
+            northLatitude: 4.0
+            southLatitude: -3.0
+            westLongitude: -110.0
         endDay: '312.0'
         inactiveDelegate: Anarchy
         startDay: '282.0'
@@ -202,9 +217,31 @@ EPO Abundance Pathfinding:
     - '2017-07-01'
     - '2017-10-01'
     recruitmentProcesses: null
+  speciesCodesSupplier: *id002
   vesselsFilePath: inputs/epo_inputs/boats.csv
+  weightGroupsFactory:
+    weightGroupCutoffsPerSpecies:
+      Bigeye tuna:
+      - 12.0
+      - 15.0
+      Skipjack tuna:
+      - 11.5016
+      - 11.5019
+      Yellowfin tuna:
+      - 12.0
+      - 15.0
+    weightGroupNamesPerSpecies:
+      Skipjack tuna:
+      - small
+      - medium
+      - large
+      Yellowfin tuna:
+      - small
+      - medium
+      - large
+      Bigeye tuna:
+      - small
+      - medium
+      - large
   zapper: true
   zapperAge: false
-  additionalStartables:
-    - IATTC Closure Period Randomizer:
-        proportionOfBoatsInClosureA: 0.5
