--- a/POSEIDON/inputs/tests/tunabacksliding/base_scenario.yaml
+++ b/POSEIDON/inputs/tests/tunabacksliding/base_scenario.yaml
@@ -1,10 +1,4 @@
 EPO Abundance Pathfinding:
-  gearStrategy:
-    FAD Refill:
-      maxFadDeploymentsFile: inputs/epo_inputs/tests/backsliding/max_deployments.csv
-  catchSamplersFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.samplers.AbundanceCatchSamplersFactory
-    abundanceFilters: null
-    catchSamplesFile: inputs/epo_inputs/tests/backsliding/set_samples.csv
   abundanceFiltersFactory:
     selectivityFilePath: inputs/epo_inputs/abundance/selectivity.csv
   abundanceInitializerFactory:
@@ -29,6 +23,8 @@ EPO Abundance Pathfinding:
         limitClass5: 120
         limitClass6a: 300
         limitClass6b: 450
+    allSetsObservers: !!set {
+      }
     biomassLostMonitor: null
     decayRateOfDeploymentLocationValues: 0.01
     decayRateOfDolphinSetLocationValues: 0.01
@@ -50,7 +46,9 @@ EPO Abundance Pathfinding:
     fadInitializerFactory: null
     fadSetObservers: !!set {
       }
+    fishValueCalculatorStandardDeviation: '0.0'
     locationValuesFile: inputs/epo_inputs/tests/backsliding/location_values.csv
+    maxCurrentSpeedsFile: inputs/epo_inputs/max_current_speeds.csv
     nonAssociatedSetObservers: !!set {
       }
     nonAssociatedSetTimeSinceLastVisitModulationFunction:
@@ -83,7 +81,18 @@ EPO Abundance Pathfinding:
   abundanceRestorerFactory:
     schedule:
       0: 365
+  additionalStartables:
+  - IATTC Closure Period Randomizer:
+      proportionOfBoatsInClosureA: '0.5'
   attractionWeightsFile: inputs/epo_inputs/tests/backsliding/action_weights.csv
+  catchSamplersFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.samplers.AbundanceCatchSamplersFactory
+    abundanceFilters: null
+    catchSamplesFile: inputs/epo_inputs/tests/backsliding/set_samples.csv
+    speciesCodesSupplier: &id002 !!uk.ac.ox.oxfish.biology.SpeciesCodesFromFileFactory
+      inputsFolder: &id001
+        path: inputs/epo_inputs
+      speciesCodeFile: species_codes.csv
+    yearlyReset: false
   costsFile: inputs/epo_inputs/costs.csv
   destinationStrategy:
     additionalHourlyDelayDeployment: '0.1'
@@ -93,6 +102,9 @@ EPO Abundance Pathfinding:
     catchSamplersFactory: !!uk.ac.ox.oxfish.fisher.purseseiner.samplers.AbundanceCatchSamplersFactory
       abundanceFilters: null
       catchSamplesFile: inputs/epo_inputs/tests/backsliding/set_samples.csv
+      speciesCodesSupplier: null
+      yearlyReset: false
+    delSetsRangeInSeatiles: '0.0'
     deploymentBias: '1.0'
     fadModule:
       Centroid FAD Planning:
@@ -100,20 +112,23 @@ EPO Abundance Pathfinding:
         bannedYCoordinateBounds: ''
         discretization:
           Squared Discretization:
-            horizontalSplits: '5'
-            verticalSplits: '3'
+            horizontalSplits: '5.0'
+            verticalSplits: '3.0'
         distancePenalty: '9.819280341'
         minimumValueFadSets: '6971.021459999999'
     hoursWastedOnFailedSearches: '1.4932888800000002'
     maxTripDurationFile: inputs/epo_inputs/tests/backsliding/boats.csv
-    minimumValueOpportunisticFadSets: '5000.0'
-    ownFadActionWeightBias: '1.0'
     minimumPercentageOfTripDurationAllowed: '1.0'
+    minimumValueOpportunisticFadSets: '5000.0'
+    noaBias: '1.0'
+    noaSetsCanPoachFads: false
+    noaSetsRangeInSeatiles: '0.0'
+    ownFadActionWeightBias: '1.0'
     planningHorizonInHours: '168.0'
     purgeIllegalActionsImmediately: false
+    uniqueCatchSamplerForEachStrategy: false
   fadInitializerFactory:
     Abundance FAD Beta Initializer With Expiration:
-      daysOfFadActivity: '50.0'    
       attractableBiomassCoefficients:
         Bigeye tuna: '0.0'
         Yellowfin tuna: '0.0'
@@ -126,13 +141,15 @@ EPO Abundance Pathfinding:
         Bigeye tuna: '0.0'
         Yellowfin tuna: '0.0'
         Skipjack tuna: '0.0'
-      parameterAlpha: .5
-      parameterBeta: 5
+      daysOfFadActivity: '50.0'
+      fadDudRate: '0.0'
       fishReleaseProbabilityInPercent: '0.0'
       growthRates:
         Bigeye tuna: '0.0'
         Yellowfin tuna: '0.0'
         Skipjack tuna: '0.0'
+      parameterAlpha: '0.5'
+      parameterBeta: '5.0'
       selectivityFilters: {
         }
       speciesCodes: null
@@ -142,7 +159,14 @@ EPO Abundance Pathfinding:
       Y2016: inputs/epo_inputs/currents/currents_2016.csv
       Y2017: inputs/epo_inputs/currents/currents_2017.csv
       Y2018: inputs/epo_inputs/currents/currents_2018.csv
+    inputIsMetersPerSecond: true
   fishingStrategyFactory: Default to Destination Strategy
+  gearStrategy:
+    FAD Refill:
+      fadCost: 1000.0
+      maxFadDeploymentsFile: inputs/epo_inputs/tests/backsliding/max_deployments.csv
+      targetYear: 2017
+  inputFolder: *id001
   locationValuesFilePath: inputs/epo_inputs/tests/backsliding/location_values_all2017.csv
   mapInitializerFactory:
     From File Map:
@@ -151,6 +175,10 @@ EPO Abundance Pathfinding:
       latLong: true
       mapFile: inputs/epo_inputs/depth.csv
       mapPaddingInDegrees: '0.5'
+  marketMapFactory: !!uk.ac.ox.oxfish.model.market.YearlyMarketMapFromPriceFileFactory
+    priceFilePath: inputs/epo_inputs/prices.csv
+    speciesCodes: null
+  purseSeineGearFactory: null
   recruitmentProcessesFactory:
     recruitmentParametersFilePath: inputs/epo_inputs/abundance/recruitment_parameters.csv
   regulationsFactory: !!uk.ac.ox.oxfish.model.scenario.StandardIattcRegulationsFactory
@@ -170,10 +198,11 @@ EPO Abundance Pathfinding:
       Temporary Regulation:
         delegate:
           Specific MPA from Coordinates:
-            eastLongitude: '-96.0'
-            northLatitude: '4.0'
-            southLatitude: '-3.0'
-            westLongitude: '-110.0'
+            eastLongitude: -96.0
+            name: null
+            northLatitude: 4.0
+            southLatitude: -3.0
+            westLongitude: -110.0
         endDay: '312.0'
         inactiveDelegate: Anarchy
         startDay: '282.0'
@@ -188,9 +217,31 @@ EPO Abundance Pathfinding:
     - '2017-07-01'
     - '2017-10-01'
     recruitmentProcesses: null
+  speciesCodesSupplier: *id002
+  vesselsFilePath: inputs/epo_inputs/tests/backsliding/boats.csv
+  weightGroupsFactory:
+    weightGroupCutoffsPerSpecies:
+      Bigeye tuna:
+      - 12.0
+      - 15.0
+      Skipjack tuna:
+      - 11.5016
+      - 11.5019
+      Yellowfin tuna:
+      - 12.0
+      - 15.0
+    weightGroupNamesPerSpecies:
+      Skipjack tuna:
+      - small
+      - medium
+      - large
+      Yellowfin tuna:
+      - small
+      - medium
+      - large
+      Bigeye tuna:
+      - small
+      - medium
+      - large
   zapper: true
   zapperAge: false
-  vesselsFilePath: inputs/epo_inputs/tests/backsliding/boats.csv
-  additionalStartables:
-    - IATTC Closure Period Randomizer:
-        proportionOfBoatsInClosureA: 0.5
