use SpeciesCodes supplier in market map factory

--- a/POSEIDON/inputs/tests/tunabacksliding/base_scenario_1.yaml
+++ b/POSEIDON/inputs/tests/tunabacksliding/base_scenario_1.yaml
@@ -117,7 +117,7 @@ EPO Abundance Pathfinding:
     priceFile:
       inputFolder: *id001
       path: prices.csv
-    speciesCodes: null
+    speciesCodesSupplier: *id002
   portInitializer: !!uk.ac.ox.oxfish.geography.ports.FromSimpleFilePortInitializer
     portFile:
       inputFolder: *id001
