--- a/POSEIDON/inputs/tests/tunabacksliding/base_scenario_1.yaml
+++ b/POSEIDON/inputs/tests/tunabacksliding/base_scenario_1.yaml
@@ -30,7 +30,9 @@ EPO Abundance Pathfinding:
           path: inputs/epo_inputs
         path: species_codes.csv
     yearlyReset: false
-  costsFile: inputs/epo_inputs/costs.csv
+  costsFile:
+    inputFolder: *id001
+    path: costs.csv
   destinationStrategy:
     additionalHourlyDelayDeployment: '0.1'
     additionalHourlyDelayDolphinSets: '5.0'
