add yearly action counters for new regulation system

--- a/POSEIDON/build.gradle
+++ b/POSEIDON/build.gradle
@@ -45,6 +45,7 @@ sourceSets {
 dependencies {
 
     implementation(project(":regulations:core"))
+    implementation(project(":agents:core"))
     api(project(":common:api"))
 
     //mason libraries. They aren't on maven so we have to lug their jars around
