add new InVectorField regulation condition
and move geomason jar to a top-level subfolder so it can more
easily be used by gradle subprojects. Might have to do the same
with MASON itself at some point, though I'm vaguely hoping we won't
have to...

--- a/POSEIDON/build.gradle
+++ b/POSEIDON/build.gradle
@@ -44,7 +44,7 @@ dependencies {
 
     //mason libraries. They aren't on maven so we have to lug their jars around
     api fileTree(dir: 'libs/mason', include: '*.jar')
-    implementation fileTree(dir: 'libs/geomason', include: '*.jar')
+    api files("$rootDir/libs/geomason/geomason.1.5.jar")
 
     // JTS Topology Suite, a geomason dependency
     implementation("com.vividsolutions:jts:1.13")
