allow the calibration generator to use different target types

--- a/POSEIDON/build.gradle
+++ b/POSEIDON/build.gradle
@@ -88,6 +88,10 @@ dependencies {
     //guava. Useful for PreConditions and sometimes specialized collections
     implementation "com.google.guava:guava:32.1.1-jre"
 
+    // Google AutoService annotations, for generating ServiceLoader metadata automatically
+    annotationProcessor 'com.google.auto.service:auto-service:1.1.1'
+    compileOnly 'com.google.auto.service:auto-service-annotations:1.1.1'
+
     // Reference implementation of JSR-385 for units of measure
     implementation 'si.uom:si-quantity:2.1'
     implementation 'si.uom:si-units:2.1'
